<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobilis 9Cards</string>
    <string name="action_settings">Settings</string>
    <string name="key_newgame_gamename">key_newgame_gamename</string>
    <string name="key_newgame_maxplayers">key_newgame_maxplayers</string>
    <string name="key_newgame_rounds">key_newgame_rounds</string>
    <string name="title_activity_instructions">Instructions</string>
    <string name="title_activity_open_games">Open Games</string>
    <string name="title_activity_create_game">Create a Game</string>
    <string name="title_activity_play"></string>
    <string name="title_activity_settings">XMPP Settings</string>
    <string name="txt_btn_play_start_1">Wait until creator starts the game</string>
    <string name="txt_btn_play_start_2">Start Game</string>
    
    <string name="edit_text_pref_server_xmpp">edit_text_pref_server_xmpp</string>
    <string name="edit_text_pref_server_mobilis_jid">edit_text_pref_server_mobilis_jid</string>
    <string name="edit_text_pref_user_jid">edit_text_pref_user_jid</string>
    <string name="edit_text_pref_user_password">edit_text_pref_user_password</string>
    <string name="edit_text_pref_user_nick">edit_text_pref_user_nick</string>
    

</resources>